src/app/modules/products/products.component.css
.filterColumn {
  float: left;
  width: 27.5%;
}

.productColumn {
  float: left;
  width: 72.5%;
}

.thumbnail {
  border-radius: 8px;
  width: 282px;
  height: 258px;
}

.discount {
  position: absolute;
  top: 12px;
  left: 12px;
  width: 55px;
  height: 15px;
  text-align: center;
  padding: 4px 8px;
  background-color: #41cccc;
  border: 0px solid transparent;
  border-radius: 4px;
  font-weight: 700;
  font-size: 12px;
  color: #344054;
}

.card {
  width: 282px;
  height: 580px;
  border: 0.5px solid #d0d5dd;
  border-radius: 8px;
  margin-left: 27px;
  padding-bottom: 16px;
  margin-bottom: 24px;
  position: relative;
}

.cardTitle {
  font-size: 20px;
  font-weight: 700;
  color: #344054;
  margin-top: 15px;
  margin-bottom: 8px;
}

.cardText1 {
  font-size: 14px;
  font-weight: 700;
  line-height: 17px;
  letter-spacing: 0em;
}

.cardText2 {
  font-size: 14px;
  font-weight: 400;
  line-height: 17px;
  letter-spacing: 0em;
}

.cardText3 {
  font-size: 14px;
  font-weight: 600;
  line-height: 17px;
  letter-spacing: 0em;
}

.cardBtn {
  font-size: 16px;
  font-weight: 700;
  line-height: 22px;
  letter-spacing: 0em;
  color: #344054;
  background-color: #41cccc;
  padding: 0px;
  border: 0px;
  height: 50px;
  width: 250px;
  left: 0px;
  top: 0px;
  border-radius: 4px;
  border-color: transparent;
}

.cardDescription {
  width: 239px;
}

.cardContainer {
  padding: 16px 16px;
}

.ratingReviewContainer {
  margin-right: 16px;
  margin-bottom: 16px;
  text-align: right;
}

.cardRating {
  color: #f4b000;
  font-weight: 700;
  font-size: 16px;
  line-height: 22px;
}

.cardReview {
  color: #d0d5dd;
  font-weight: 400;
  font-size: 16px;
  line-height: 22px;
}

.header {
  font-size: 32px;
  font-weight: 700;
  line-height: 39px;
  letter-spacing: 0em;
  margin-top: 80px;
  margin-left: 114px;
}

.path {
  font-size: 18px;
  font-weight: 400;
  line-height: 22px;
  letter-spacing: 0em;
  margin-top: 29px;
  margin-left: 114px;
}

.filter {
  margin-left: 114px;
  width: 282px;
  height: 588px;
  border: 0.5px solid #d0d5dd;
  border-radius: 8px;
}

.filterTitle {
  font-size: 16px;
  font-weight: 700;
  line-height: 22px;
  letter-spacing: 0em;
  margin-top: 12px;
  margin-left: 12px;
}

.radioGroup {
  margin-left: 12px;
  padding: 3px;
}

input[type="radio"] {
  accent-color: #41cccc;
}

label {
  font-size: 16px;
  font-weight: 400;
  line-height: 22px;
  letter-spacing: 0em;
}

.cardDetails {
  margin-bottom: 8px;
}

.column {
  float: left;
  width: auto;
}

.row:after {
  content: "";
  display: table;
  clear: both;
}

.pagination {
  display: flex;
  justify-content: center;
}

/* Pagination links */
.pagination a {
  color: #1e1e1e;
  font-size: 15px;
  font-weight: 500;
  float: left;
  padding: 8px 16px;
  text-decoration: none;
  transition: background-color 0.3s;
  background-color: transparent;
  margin: 0px 6px;
  border: 1px solid #f6f6f6;
  border-radius: 8px;
}

/* Style the active/current link */
.pagination a.active {
  background-color: dodgerblue;
  color: white;
}

/* Add a grey background color on mouse-over */
.pagination a:hover:not(.active) {
  background-color: #41cccc;
}

